--- a/src/app/create-post/create-post.component.html
+++ b/src/app/create-post/create-post.component.html
@@ -1,3 +1,36 @@
-<p>
-  create-post works!
-</p>
+<div class="content-wrapper">
+  <!-- Content Header (Page header) -->
+  <div class="content-header">
+    Create a Post
+  </div>
+
+  <!-- /.content-header -->
+  <!-- DataTables Example -->
+  <div class="card mb-3">
+    <div class="card-body">
+      <form [formGroup]="postCreateForm">
+        <div class="form-group">
+          <label for="postTitle">Post Title</label>
+          <input type="text" class="form-control" formControlName="postTitleControl" id="postTitle" placeholder="Post Title">
+        </div>
+        <div class="form-group">
+          <label for="post">Post</label>
+          <textarea class="form-control" formControlName="postControl" id="post" rows="3"></textarea>
+        </div>
+        <div class="form-group">
+          <label for="category">Category</label>
+          <select type="text" formControlName="postCatControl" class="form-control" id="category" placeholder="name@example.com">
+            <option *ngFor="let cat of categories" [value]="cat.id"> {{cat.value}} </option>
+          </select>
+        </div>
+        <div class="btn-group mr-2">
+          <button type="button" class="btn btn-primary">Create Post</button>
+        </div>
+        <div class="btn-group mr-2">
+          <button type="button" class="btn btn-secondary">Clear Form</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
