--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,3 +1,143 @@
-<p>
-  user-profile works!
-</p>
+<div class="content-wrapper">
+  <div class="content-header">
+    {{title}}
+  </div>
+
+  <div class="card mb-3">
+    <div class="card-body">
+      <div class="row">
+        <div class="col-4">
+          <img src="src/dist/img/user2-160x160.jpg" alt="..." class="img-thumbnail">
+        </div>
+        <!--Viewable Mode-->
+        <div class="col-8" *ngIf="!editableMode">
+          <div class="row">
+            <div class="col-4">
+              National ID:
+            </div>
+            <div class="col-8">
+              {{userData.nic}}
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-4">
+              First Name:
+            </div>
+            <div class="col-8">
+              {{userData.first_name}}
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-4">
+              Last Name:
+            </div>
+            <div class="col-8">
+              {{userData.last_name}}
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-4">
+              Email:
+            </div>
+            <div class="col-8">
+              {{userData.email}}
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-4">
+              Profession:
+            </div>
+            <div class="col-8">
+              {{userData.profession}}
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-4">
+              Affiliation:
+            </div>
+            <div class="col-8">
+              {{userData.affiliation}}
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-4">
+              User Type:
+            </div>
+            <div class="col-8">
+              {{userData.user_type}}
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-4">
+              Username:
+            </div>
+            <div class="col-8">
+              {{userData.username}}
+            </div>
+          </div>
+        </div>
+        <!--        Editable Mode-->
+        <div class="col-8" *ngIf="editableMode">
+          <form [formGroup]="editFormGroup">
+            <div class="row">
+              <div class="col-4">
+                National ID:
+              </div>
+              <div class="col-8">
+                <div class="form-group">
+                  <input type="text" class="form-control" formControlName="nic">
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-4">
+                First Name:
+              </div>
+              <div class="col-8">
+                <input type="text" class="form-control" formControlName="first_name">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-4">
+                Last Name:
+              </div>
+              <div class="col-8">
+                <input type="text" class="form-control" formControlName="last_name">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-4">
+                Email:
+              </div>
+              <div class="col-8">
+                <input type="text" class="form-control" formControlName="email">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-4">
+                Profession:
+              </div>
+              <div class="col-8">
+                <input type="text" class="form-control" formControlName="profession">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-4">
+                Affiliation:
+              </div>
+              <div class="col-8">
+                <input type="text" class="form-control" formControlName="affiliation">
+              </div>
+            </div>
+            <div class="btn-group mr-2">
+              <button type="button" class="btn btn-primary" (click)="updateUserData()" [disabled]="!editFormGroup.valid">Update User</button>
+            </div>
+            <div class="btn-group mr-2">
+              <button type="button" (click)="clearData()" class="btn btn-secondary">Clear Form</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
