--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,3 +1,22 @@
-<p>
-  user-profile works!
-</p>
+<div class="card">
+  <img src="/w3images/team2.jpg" alt="John" style="width:40%">
+  <h3>John Doe</h3>
+   <p>UI/UX Designer</p>
+  <p class="title">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsu.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsu.
+ 
+  <div style="margin: 24px 0;">
+    <a href="#"><i class="">0778210027</i></a> <br>
+    <a href="#"><i class="">johndoe@gmail.com</i></a>   
+  </div>
+  
+<div class="container">
+  <div class="center">
+    <button>Edit</button>
+  </div>
+</div>
+
+
+
+
+
+
