--- a/src/app/create-post/create-post.component.html
+++ b/src/app/create-post/create-post.component.html
@@ -1,7 +1,8 @@
 <div class="content-wrapper">
+
   <!-- Content Header (Page header) -->
   <div class="content-header">
-    Create a Post
+   Posts / Add New 
   </div>
 
   <!-- /.content-header -->
@@ -10,19 +11,24 @@
     <div class="card-body">
       <form [formGroup]="postCreateForm">
         <div class="form-group">
-          <label for="postTitle">Post Title</label>
-          <input type="text" class="form-control" formControlName="postTitleControl" id="postTitle" placeholder="Post Title">
-        </div>
-        <div class="form-group">
-          <label for="post">Post</label>
-          <textarea class="form-control" formControlName="postControl" id="post" rows="3"></textarea>
-        </div>
-        <div class="form-group">
           <label for="category">Category</label>
+          
           <select type="text" formControlName="postCatControl" class="form-control" id="category" placeholder="Categories">
             <option *ngFor="let cat of categories" [value]="cat.id"> {{cat.value}} </option>
           </select>
         </div>
+
+       
+
+        <div class="form-group">
+          <label for="postTitle">Post Title</label>
+          <input type="text" class="form-control" formControlName="postTitleControl" id="postTitle" placeholder="Post Title">
+        </div>
+        <div class="form-group">
+          <label for="post">Description</label>
+          <textarea class="form-control" formControlName="postControl" id="post" rows="3"></textarea>
+        </div>
+        
         <div class="btn-group mr-2">
           <button type="button" class="btn btn-primary" (click)="createPost()" [disabled]="!postCreateForm.valid">Create Post</button>
         </div>
