--- a/src/app/search-post/search-post.component.html
+++ b/src/app/search-post/search-post.component.html
@@ -8,7 +8,7 @@
 
   <div class="card mb-3">
     <div class="card-body">
-      <form [formGroup]="postCreateForm">
+      <form [formGroup]="searchPostForm">
         <div class="form-group">
           
           <label for="category">Category</label>
