--- a/src/app/program-manage2/program-manage2.component.html
+++ b/src/app/program-manage2/program-manage2.component.html
@@ -9,7 +9,7 @@
   <!-- DataTables Example -->
   <div class="card mb-3">
     <div class="card-body">
-      <form [formGroup]="postCreateForm">
+      <form>
         <div class="form-group">
           
           <label for="category">Users</label>
@@ -22,7 +22,7 @@
           
          
          <select type="text" formControlName="postCatControl" class="form-control" id="category" placeholder="Categories">
-            <option *ngFor="let cat of categories" [value]="cat.id"> {{cat.value}} </option>
+            <option> </option>
           </select>
         </div>
         <div class="card-body">
